# sarstats

./: .gitignore  .travis.yml  HACKING  Makefile  README.md  SAR.py  SarGrapher.py  SarParser.py  SarStats.py  SosReport.py  TODO  pyproject.toml  requirements.txt  sar_grapher.py  sar_metadata.py  sar_parser.py  sar_stats.py  sarstats  sarstats.spec  sarstats_cli.py  setup.cfg  setup.py  sos_report.py  sos_utils.py  sosreport.py  test-requirements.txt  tox.ini  utils.py
.github/workflows/: codeql.yml  pep8.yml  release.yml  unittest.yml  zizmor.yml
tests/: test_functions.py
tests/sar-files/1/: sar19  sar21  sar22
tests/sar-files/2/: sar01  sar02
tests/sar-files/3/: sar19  sar20
tests/sar-files/el5/: sar21
tests/sar-files/el6/: sar05  sar13
tests/sar-files/el7/: sar09
tests/sar-files/f23/: sar07
tests/sar-files/f39/: sar02
